[gd_scene load_steps=46 format=2]

[ext_resource path="res://assets/Fonts_v2/PT_Sans/PTSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/VScrollBar.tres" type="Theme" id=2]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/button_occupation_pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/button_occupation.png" type="Texture" id=4]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/button_occupation_hover.png" type="Texture" id=5]
[ext_resource path="res://assets/Themes_v2/CHAR_CREATION/ChC_Theme.tres" type="Theme" id=6]
[ext_resource path="res://assets/Themes_v2/EmptyTexture.tres" type="StyleBox" id=7]
[ext_resource path="res://assets/images/sexicons/male.png" type="Texture" id=8]
[ext_resource path="res://assets/Themes_v2/MANSION/M_SlaveList.tres" type="Theme" id=9]
[ext_resource path="res://assets/Themes_v2/MANSION/M_SlaveList_Button.tres" type="Theme" id=10]
[ext_resource path="res://assets/Themes_v2/MANSION/M_SlaveList_Categories.tres" type="Theme" id=11]
[ext_resource path="res://dragarraytemplate.gd" type="Script" id=12]
[ext_resource path="res://gui_modules/Mansion/Scripts/MansionSlaveListModule.gd" type="Script" id=13]
[ext_resource path="res://assets/Textures_v2/Universal/Icons/icon_foodperday.png" type="Texture" id=14]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Buttons/panel_char.png" type="Texture" id=15]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Buttons/panel_char_unavailable.png" type="Texture" id=16]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Bars/hpmp_icon_hp.png" type="Texture" id=17]
[ext_resource path="res://assets/Textures_v2/Universal/Icons/icon_population.png" type="Texture" id=18]
[ext_resource path="res://assets/Textures_v2/Universal/Icons/divider_navi_slavelist.png" type="Texture" id=19]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Buttons/panel_char_pressed.png" type="Texture" id=20]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Buttons/panel_char_hover.png" type="Texture" id=21]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Icons/hpmp_icon.png" type="Texture" id=22]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Icons/icon_slave.png" type="Texture" id=23]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Bars/hpmp_icon_mp.png" type="Texture" id=24]
[ext_resource path="res://assets/Themes_v2/MANSION/MansionSlaveListPanel.tres" type="StyleBox" id=25]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainBig.tres" type="DynamicFont" id=26]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainMiddle.tres" type="DynamicFont" id=27]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainSmall.tres" type="DynamicFont" id=28]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/button_occupation_disabled.png" type="Texture" id=29]
[ext_resource path="res://assets/images/gui/gui icons/icon_interactions.png" type="Texture" id=30]
[ext_resource path="res://assets/images/gui/gui icons/icon_bedlimit.png" type="Texture" id=31]
[ext_resource path="res://assets/images/gui/gui icons/icon_twohearts.png" type="Texture" id=32]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Bars/bar_trainees.png" type="Texture" id=33]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Bars/bar_trainees_filler.png" type="Texture" id=34]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Bars/bar_obedience_filler_g.png" type="Texture" id=35]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Bars/bar_obedience_filler_r.png" type="Texture" id=36]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Bars/bar_obedience.png" type="Texture" id=37]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Bars/bar_obedience_filler_y.png" type="Texture" id=38]
[ext_resource path="res://src/3stateProgressBar.gd" type="Script" id=39]

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=1]

[sub_resource type="StyleBoxTexture" id=2]

[sub_resource type="StyleBoxTexture" id=3]

[sub_resource type="StyleBoxTexture" id=4]

[sub_resource type="StyleBoxTexture" id=5]

[node name="MansionSlaveListModule" type="Panel"]
margin_right = 1100.0
margin_bottom = 845.0
theme = ExtResource( 9 )
custom_styles/panel = ExtResource( 25 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 446.923
margin_top = 7.7562
margin_right = 623.923
margin_bottom = 47.7562
custom_colors/font_color = Color( 0.866667, 0.905882, 0.478431, 1 )
custom_fonts/font = ExtResource( 26 )
text = "MSLMNAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
visible = false
self_modulate = Color( 0, 0, 0, 0.705882 )
show_behind_parent = true
margin_right = 1075.0
margin_bottom = 499.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Categories" type="VBoxContainer" parent="."]
margin_left = 45.6438
margin_top = 40.7328
margin_right = 1049.64
margin_bottom = 90.7328
size_flags_horizontal = 3
theme = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="Categories"]
margin_right = 1003.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="Categories/Button"]
margin_left = -5.0
margin_top = 3.0
margin_right = 986.0
margin_bottom = 54.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="Categories/Button/HBoxContainer"]
margin_right = 50.0
margin_bottom = 51.0
rect_min_size = Vector2( 50, 0 )
mouse_filter = 2
expand = true
stretch_mode = 6

[node name="sex" type="Label" parent="Categories/Button/HBoxContainer"]
margin_left = 54.0
margin_top = 4.0
margin_right = 179.0
margin_bottom = 46.0
rect_min_size = Vector2( 50, 0 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 26 )
text = "MSLMSex"

[node name="name" type="Label" parent="Categories/Button/HBoxContainer"]
margin_left = 183.0
margin_top = 4.0
margin_right = 357.0
margin_bottom = 46.0
rect_min_size = Vector2( 125, 0 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 26 )
text = "MSLMNNAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stats" type="Label" parent="Categories/Button/HBoxContainer"]
margin_left = 361.0
margin_top = 4.0
margin_right = 507.0
margin_bottom = 46.0
rect_min_size = Vector2( 100, 0 )
mouse_filter = 0
size_flags_horizontal = 0
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 26 )
text = "MSLMSTAT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="job" type="Label" parent="Categories/Button/HBoxContainer"]
margin_left = 511.0
margin_top = 4.0
margin_right = 671.0
margin_bottom = 46.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 0
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 26 )
text = "MSLMOCCU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="obed" type="Label" parent="Categories/Button/HBoxContainer"]
margin_left = 675.0
margin_top = 4.0
margin_right = 792.0
margin_bottom = 46.0
rect_min_size = Vector2( 80, 0 )
hint_tooltip = "STATOBEDIENCEDESCRIPT"
mouse_filter = 0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 26 )
text = "MSLMOB"
align = 1

[node name="explabel" type="Label" parent="Categories/Button/HBoxContainer"]
margin_left = 796.0
margin_top = 4.0
margin_right = 924.0
margin_bottom = 46.0
rect_min_size = Vector2( 70, 0 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 26 )
text = "MSLMEXP"

[node name="location" type="Label" parent="Categories/Button/HBoxContainer"]
margin_left = 928.0
margin_top = 4.0
margin_right = 1128.0
margin_bottom = 46.0
rect_min_size = Vector2( 200, 0 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 26 )
text = "MSLMLOC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="state2" type="Label" parent="Categories/Button/HBoxContainer"]
margin_left = 1132.0
margin_top = 4.0
margin_right = 1276.0
margin_bottom = 46.0
rect_min_size = Vector2( 50, 0 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 26 )
text = "MSLMTYPE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 43.6438
margin_top = 100.733
margin_right = 1047.64
margin_bottom = 272.733
rect_min_size = Vector2( 996, 10 )
theme = ExtResource( 2 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1004.0
margin_bottom = 45.0
rect_min_size = Vector2( 996, 45 )
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Button" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
visible = false
margin_right = 1004.0
margin_bottom = 52.0
rect_min_size = Vector2( 1004, 52 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 10 )
toggle_mode = true
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 21 )
texture_disabled = ExtResource( 16 )
stretch_mode = 6
script = ExtResource( 12 )

[node name="icon" type="TextureRect" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 7.0
margin_top = 5.0
margin_right = 47.0
margin_bottom = 45.0
rect_min_size = Vector2( 39, 39 )
mouse_filter = 2
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sex" type="TextureRect" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 54.0
margin_top = 5.0
margin_right = 93.0
margin_bottom = 44.0
rect_min_size = Vector2( 39, 39 )
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="explabel" type="Label" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 652.0
margin_top = 5.0
margin_right = 727.0
margin_bottom = 45.0
rect_min_size = Vector2( 75, 0 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 27 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 107.0
margin_top = 3.0
margin_right = 230.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 27 )
text = "Name "
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stats" type="TextureRect" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 252.958
margin_top = 5.0
margin_right = 292.958
margin_bottom = 45.0
texture = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp" type="TextureProgress" parent="ScrollContainer/VBoxContainer/Button/stats"]
show_behind_parent = true
margin_left = 2.44171
margin_top = 2.07547
margin_right = 42.4417
margin_bottom = 42.0755
value = 100.0
texture_progress = ExtResource( 17 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mp" type="TextureProgress" parent="ScrollContainer/VBoxContainer/Button/stats"]
show_behind_parent = true
margin_left = 22.4639
margin_top = 1.83129
margin_right = 62.4639
margin_bottom = 41.8313
value = 100.0
texture_progress = ExtResource( 24 )
fill_mode = 3

[node name="job" type="TextureButton" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 317.067
margin_top = 8.0
margin_right = 501.067
margin_bottom = 40.0
size_flags_horizontal = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 29 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Button/job"]
margin_left = 2.0
margin_right = 184.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 27 )
text = "Rest"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="obed" type="TextureProgress" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 507.0
margin_top = 6.0
margin_right = 572.0
margin_bottom = 44.0
rect_min_size = Vector2( 45, 0 )
value = 100.0
texture_under = ExtResource( 37 )
texture_over = ExtResource( 37 )
texture_progress = ExtResource( 35 )
script = ExtResource( 39 )
__meta__ = {
"_edit_use_anchors_": false
}
texture_1 = ExtResource( 36 )
texture_2 = ExtResource( 38 )
texture_3 = ExtResource( 35 )

[node name="state" type="TextureRect" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 939.188
margin_top = 5.35927
margin_right = 999.188
margin_bottom = 45.3593
rect_min_size = Vector2( 50, 0 )
mouse_filter = 2
texture = ExtResource( 23 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Location" type="Label" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 734.0
margin_top = 6.0
margin_right = 924.0
margin_bottom = 45.0
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 27 )
text = "Location"
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="progress" type="TextureProgress" parent="ScrollContainer/VBoxContainer/Button"]
visible = false
margin_left = 253.0
margin_top = 11.0454
margin_right = 676.0
margin_bottom = 38.0454
texture_under = ExtResource( 33 )
texture_progress = ExtResource( 34 )

[node name="VBoxContainer" type="HBoxContainer" parent="."]
visible = false
margin_left = 30.0
margin_top = 34.0
margin_right = 893.0
margin_bottom = 74.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 12.0
margin_right = 28.0
margin_bottom = 28.0
text = "Sex"

[node name="food_consumption" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -101.0
margin_top = -90.6971
margin_right = -54.0002
margin_bottom = -63.697
hint_tooltip = "TOOLTIPFOODCONSUMPTION"
theme = ExtResource( 6 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 28 )
text = "FC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="food_consumption"]
margin_left = -45.9306
margin_top = -5.77057
margin_right = -3.9306
margin_bottom = 34.2294
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="population" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -219.0
margin_top = -92.926
margin_right = -173.0
margin_bottom = -62.926
hint_tooltip = "TOOLTIPPOPULATION"
theme = ExtResource( 6 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="population"]
margin_left = -26.1069
margin_top = -5.77057
margin_right = 5.89313
margin_bottom = 26.2294
texture = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TravelsContainerPanel" type="Panel" parent="."]
margin_left = 25.0
margin_top = 526.0
margin_right = 1082.0
margin_bottom = 569.0
custom_styles/panel = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TravelsContainer" type="ScrollContainer" parent="TravelsContainerPanel"]
margin_left = 2.0
margin_right = 1053.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 55 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TravelsContainerPanel/TravelsContainer"]
custom_constants/separation = 18

[node name="Button" type="Button" parent="TravelsContainerPanel/TravelsContainer/HBoxContainer"]
visible = false
margin_right = 108.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.6, 0.513726, 0.435294, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
toggle_mode = true
text = "Mansion"
flat = true

[node name="VSeparator" type="TextureRect" parent="TravelsContainerPanel"]
visible = false
margin_left = 2.0
margin_right = 4.0
margin_bottom = 32.0
texture = ExtResource( 19 )

[node name="BedroomIcon" type="TextureRect" parent="."]
margin_left = 680.272
margin_top = 794.056
margin_right = 732.272
margin_bottom = 834.056
texture = ExtResource( 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DateIcon" type="TextureRect" parent="."]
margin_left = 325.272
margin_top = 794.056
margin_right = 377.272
margin_bottom = 834.056
texture = ExtResource( 32 )

[node name="SexIcon" type="TextureRect" parent="."]
margin_left = 509.133
margin_top = 793.796
margin_right = 561.133
margin_bottom = 833.796
hint_tooltip = "Date limit. Renews once a week."
texture = ExtResource( 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BedroomLimit" type="Label" parent="."]
margin_left = 731.326
margin_top = 795.316
margin_right = 831.326
margin_bottom = 835.316
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 27 )
text = "1/1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DateLimit" type="Label" parent="."]
margin_left = 377.0
margin_top = 794.0
margin_right = 477.0
margin_bottom = 829.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 27 )
text = "1/1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SexLimit" type="Label" parent="."]
margin_left = 556.0
margin_top = 794.0
margin_right = 656.0
margin_bottom = 829.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 27 )
text = "1/1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
